@@ -1,3 +1,10 @@
+*gitlab-shell-5.3.1 (25 Jul 2017)
+*gitlab-shell-5.4.0 (25 Jul 2017)
+
+  25 Jul 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.3.1.ebuild,
+  +gitlab-shell-5.4.0.ebuild:
+  dev-vcs/gitlab-shell:  Add new versions of gitlab-shell
+
   16 Jul 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-shell-5.0.0.ebuild,
   gitlab-shell-5.0.2.ebuild, gitlab-shell-5.0.4.ebuild,
   gitlab-shell-5.0.5.ebuild, gitlab-shell-5.1.1.ebuild:
